# tongrams

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build_mph_lm.cpp  build_trie_lm.cpp  lm_types.hpp  mappers.hpp  mph_count_lm.hpp  mph_prob_lm.hpp  score.cpp  setup.cfg  setup.py  state.hpp  trie_count_lm.hpp  trie_prob_lm.hpp
include/: lm_types.hpp  mappers.hpp  mph_count_lm.hpp  mph_prob_lm.hpp  score.hpp  state.hpp  trie_count_lm.hpp  trie_prob_lm.hpp
include/sequences/: compact_elias_fano.hpp  darray.hpp  ef_sequence.hpp  fast_ef_sequence.hpp  indexed_codewords_sequence.hpp  integer_codes.hpp  pef_global_parameters.hpp  pointer_sequence.hpp  prefix_summed_sequence.hpp  sequence_collections.hpp  uniform_pef_sequence.hpp
include/sorters/: comparators.hpp  sorter.hpp  sorter_common.hpp
include/utils/: binary_header.hpp  circular_buffer.hpp  iterators.hpp  mph_tables.hpp  mphf.hpp  parsers.hpp  pools.hpp  stats.cpp  util.hpp  util_types.hpp
include/vectors/: bit_vector.hpp  compact_triplets_vector.hpp  compact_vector.hpp  hash_compact_vector.hpp  sorted_array.hpp
python/: .gitignore  README.md  ReadMe.md  build_install.sh  example.py  install.sh  readme.md  setup.cfg  setup.py  test_after_install.py  test_ef_trie_prob.py  test_trie_count.py  test_trie_prob.py  tongrammodule.cpp  tongrams.cpp
sequences/: compact_elias_fano.hpp  darray.hpp  ef_sequence.hpp  fast_ef_sequence.hpp  indexed_codewords_sequence.hpp  integer_codes.hpp  pef_global_parameters.hpp  pointer_sequence.hpp  prefix_summed_sequence.hpp  sequence_collections.hpp  uniform_pef_sequence.hpp
sorters/: comparators.hpp  sort_arpa.cpp  sort_grams.cpp  sorter.hpp
src/: build_hash.cpp  build_mph_lm.cpp  build_trie.cpp  build_trie_lm.cpp  lookup_perf_test.cpp  print_stats.cpp  score.cpp  sort_arpa.cpp  sort_grams.cpp
test/: check_count_model.cpp  compact_vector_test.cpp  fast_ef_sequence_test.cpp  hash_compact_vector_test.cpp  lookup_perf_test.cpp  test_compact_vector.cpp  test_count_model.cpp  test_fast_ef_sequence.cpp  test_hash_compact_vector.cpp  test_uniform_pef_sequence.cpp  uniform_pef_sequence_test.cpp
test_data/: queries.not_found  queries.random.5K  sample_text  sample_text.LESSER
utils/: binary_header.hpp  circular_buffer.hpp  iterators.hpp  mph_tables.hpp  mphf.hpp  parsers.hpp  pools.hpp  print_stats.cpp  stats.cpp  util.hpp  util_types.hpp
vectors/: bit_vector.hpp  compact_triplets_vector.hpp  compact_vector.hpp  hash_compact_vector.hpp  sorted_array.hpp
