[metadata]
name = tongrams
version = 1.0
author = Giulio Ermanno Pibiri
url = https://github.com/jermp/tongrams
description = Tons of N-Grams
long_description = file: python/README.md
keywords = n-grams, storage, trie, hashtable
license = MIT
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Development Status :: 4 - Beta
	Environment :: Other Environment
	Intended Audience :: Developers
	License :: OSI Approved
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.4
zip_safe = True
setup_requires = setuptools>=44; wheel; setuptools_scm[toml]>=3.4.3
package_dir = 
	= python
